--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <img id="urlImagePreview" alt="URL Image Preview" style="display: none;">
         </div>
     </div>
-
+    <script src="app.js"></script>
     <script>
         const fileInput = document.getElementById('fileInput');
         const urlOutput = document.getElementById('urlOutput');
