--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image to URL Converter</title>
-   <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://res.cloudinary.com/dr8dzahhw/image/upload/v1724728442/artqmax5dvb0yknonts9.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <h2>Image to URL Converter</h2>
         <input type="file" id="fileInput" accept="image/*">
         <div class="output">
+            <div class="status">
+                <span id="statusText"></span> <!-- Tambahkan elemen status -->
+            </div>
             <label for="urlOutput">Image URL:</label>
             <textarea id="urlOutput" rows="4" readonly></textarea>
             <div class="buttons">
@@ -21,55 +25,68 @@
             <img id="urlImagePreview" alt="URL Image Preview" style="display: none;">
         </div>
     </div>
-    <script src="app.js"></script>
     <script>
-        const fileInput = document.getElementById('fileInput');
-        const urlOutput = document.getElementById('urlOutput');
-        const urlImagePreview = document.getElementById('urlImagePreview');
-        const copyButton = document.getElementById('copyButton');
+      const fileInput = document.getElementById('fileInput');
+const urlOutput = document.getElementById('urlOutput');
+const urlImagePreview = document.getElementById('urlImagePreview');
+const copyButton = document.getElementById('copyButton');
+const statusText = document.getElementById('statusText');
 
-        fileInput.addEventListener('change', function() {
-            const file = this.files[0];
-            if (file) {
-                const formData = new FormData();
-                formData.append('image', file);
+fileInput.addEventListener('change', function() {
+    const file = this.files[0];
+    if (file) {
+        const formData = new FormData();
+        formData.append('image', file);
 
-                fetch('/upload', {
-                    method: 'POST',
-                    body: formData
-                })
-                .then(response => response.json())
-                .then(data => {
-                    const imageUrl = data.url;
-                    urlOutput.value = imageUrl;
-                    urlImagePreview.src = imageUrl;
-                    urlImagePreview.style.display = 'block';
-                    
-                    // Enable the copy button
-                    copyButton.classList.remove('disabled');
-                    copyButton.disabled = false;
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                });
-            }
+        // Menampilkan status "Memuat..."
+        statusText.textContent = 'Memuat...';
+        copyButton.classList.add('loading');
+        copyButton.classList.remove('enabled');
+        copyButton.disabled = true;
+
+        fetch('/upload', {
+            method: 'POST',
+            body: formData
+        })
+        .then(response => response.json())
+        .then(data => {
+            const imageUrl = data.url;
+            urlOutput.value = imageUrl;
+            urlImagePreview.src = imageUrl;
+            urlImagePreview.style.display = 'block';
+            
+            // Mengubah status menjadi "Terconvert"
+            statusText.textContent = 'Terconvert';
+            copyButton.classList.remove('loading');
+            copyButton.classList.add('enabled');
+            copyButton.disabled = false;
+        })
+        .catch(error => {
+            console.error('Error:', error);
+            statusText.textContent = 'Gagal memuat';
+            copyButton.classList.remove('loading');
+            copyButton.classList.remove('enabled');
+            copyButton.disabled = false;
         });
+    }
+});
 
-        copyButton.addEventListener('click', function() {
-            if (urlOutput.value) {
-                urlOutput.select();
-                document.execCommand('copy');
+copyButton.addEventListener('click', function() {
+    if (urlOutput.value) {
+        urlOutput.select();
+        document.execCommand('copy');
 
-                copyButton.textContent = 'Copied';
-                copyButton.classList.add('copied');
+        copyButton.textContent = 'Copied';
+        copyButton.classList.add('copied');
 
-                // Reset button text after a few seconds
-                setTimeout(() => {
-                    copyButton.textContent = 'Copy';
-                    copyButton.classList.remove('copied');
-                }, 2000);
-            }
-        });
+        // Reset button text after a few seconds
+        setTimeout(() => {
+            copyButton.textContent = 'Copy';
+            copyButton.classList.remove('copied');
+        }, 2000);
+    }
+});
+
     </script>
 </body>
 </html>
