--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
                 copyButton.classList.add('loading');
                 copyButton.disabled = true;
 
-                fetch('/server.js', {
+                fetch('/upload/upload.js', {
                     method: 'POST',
                     body: formData
                 })
