--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h2>Image to URL Converter</h2>
+        <p>File dibawah (10 mb)</p>
         <input type="file" id="fileInput" accept="image/*">
         <div class="output">
             <div class="status">
