--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>Image to URL Converter</h2>
-        <p>File dibawah (10 mb)</p>
+        <p>File dibawah 10 MB</p>
         <input type="file" id="fileInput" accept="image/*">
         <div class="output">
             <div class="status">
@@ -23,7 +23,7 @@
             </div>
         </div>
         <div class="preview-container">
-            <img id="urlImagePreview" alt="URL Image Preview">
+            <img id="urlImagePreview" alt="URL Image Preview" style="display: none;">
         </div>
     </div>
     <script>
@@ -39,32 +39,31 @@
                 const formData = new FormData();
                 formData.append('image', file);
 
-                statusText.textContent = 'Memuat...';
-                copyButton.classList.add('loading');
+                statusText.textContent = 'Uploading...';
                 copyButton.disabled = true;
 
-                fetch('/upload', {
+                fetch('http://localhost:3000/upload', {
                     method: 'POST',
                     body: formData
                 })
-                .then(response => response.json())
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Upload failed');
+                    }
+                    return response.json();
+                })
                 .then(data => {
                     const imageUrl = data.url;
                     urlOutput.value = imageUrl;
                     urlImagePreview.src = imageUrl;
                     urlImagePreview.style.display = 'block';
-                    
-                    statusText.textContent = 'Terconvert';
-                    copyButton.classList.remove('loading');
-                    copyButton.classList.add('enabled');
+
+                    statusText.textContent = 'Upload successful!';
                     copyButton.disabled = false;
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                    statusText.textContent = 'Gagal memuat';
-                    copyButton.classList.remove('loading');
-                    copyButton.classList.remove('enabled');
-                    copyButton.disabled = false;
+                    statusText.textContent = 'Upload failed!';
                 });
             }
         });
@@ -74,12 +73,9 @@
                 urlOutput.select();
                 document.execCommand('copy');
 
-                copyButton.textContent = 'Copied';
-                copyButton.classList.add('copied');
-
+                copyButton.textContent = 'Copied!';
                 setTimeout(() => {
                     copyButton.textContent = 'Copy';
-                    copyButton.classList.remove('copied');
                 }, 2000);
             }
         });
