--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 
                 const baseUrl = window.location.origin;
 
-                fetch(`${baseUrl}/upload`, {
+                fetch(`/upload`, {
                     method: 'POST',
                     body: formData
                 })
